2024-05-02: more documentation for example programs [fb8e531]
2024-05-01: fix set_cal_out_freq_6022.py; some minor updates [3560cbd]
2024-02-25: add fx2lib lib files [852f574]
2024-02-24: refactoring; move firmware code out of python module [0ddab5e]
2024-02-23: rework the serial number routine [1c46ba5]
2024-02-20: Merge branch 'main' of github.com:Ho-Ro/Hantek6022API [c8cee4c]
2024-02-20: add warning to dangerous example program reset_eeprom_6022.py [d1ad1a0]
2023-11-05: Merge pull request #22 from BMecke/main [cde80ef]
2023-10-26: doc update; fix debug tool [ff6c527]
2023-09-20: Numpy functions are now used in functions "scale_read_data" and "convert_sampling_rate_to_measurement_times" to improve performance. [cebf107]
2023-07-27: Update version; update github runner (ubuntu-20.04 -> ubuntu-22.04) [c692226]
2023-07-27: Merge pull request #21 from f1rmb/fix_python_version_usage [8021a1a]
2023-07-27: Make it work when 'python' is not available, but python3 is (like Ubuntu/Mint). [a36eade]
2023-03-06: correct version [479c738]
2023-03-06: correct ini file offset sign (same value as in EEPROM), fix comments [d25822d]
2022-10-18: update build process, create OpenHantek6022 header file with FW version [01b82fd]
2022-07-29: update README, add status badges [00a965f]
2022-07-29: upversion to 2.10.4 [6737826]
2022-07-29: fix for #17 provided by guerby [b5fbe7b]
2022-07-15: bugfix for upload_*_firmware_from_hex.py [5309e5f]
2022-04-02: new firmware: HW calibration signal output via T2OUT pin (HW change) [ecd6302]
2022-03-21: Fix #15 - install Linux files only when building under Linux [be76527]
2022-03-14: More refactoring [5d434c2]
2022-03-14: Code cleanup / refactor [f4c52e1]
2022-03-14: Adapt calibration file format for OH6022 persistent offset storage [3cac630]
2022-03-08: Improved exception and error handling in LibUsbScope, doc update [dc05698]
2022-03-01: new sample rates 32k, 640k, doc update, tools update [4cb4edb]