@@ -1,3 +1,4 @@
+2024-05-03: upversion 2.10.8; update examples and doc [ac44d00]
 2024-05-02: more documentation for example programs [fb8e531]
 2024-05-01: fix set_cal_out_freq_6022.py; some minor updates [3560cbd]
 2024-02-25: add fx2lib lib files [852f574]
